src/Domain/Compiler/Tests/Expression/BinaryExpression/OverflowError/__Baselines__/U64MaxOverflow_End-StashIr.error
error: Value subceeds min limit of 'u64'.
--> main.hs:7:17
  | 
7 |         return -1 + 18446744073709551615 * 2;
  |                 ^
error: Integral expression exceeds global maximum limit (u64_max).
--> main.hs:7:21
  | 
7 |         return -1 + 18446744073709551615 * 2;
  |                     ^^^^^^^^^^^^^^^^^^^^^^^^
